force-app/main/default/objects/Project_Account_Relation__c/Project_Account_Relation__c.object-meta.xml
<CustomObject>
    <description>1. Integration relevant
2. ZRD
3. SF-141</description>
    <label>Projekt Account Beziehung</label>
    <nameField>
        <displayFormat>PAR-{00000}</displayFormat>
        <label>Project Account Relation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Projekt Account Beziehungen</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>