force-app/main/default/objects/Project_Account_Relation__c/fields/Account_Role__c.field-meta.xml
<CustomField>
    <fullName>Account_Role__c</fullName>
    <description>1. Integration relevant (Grace)
2. ZR
3.</description>
    <label>Account Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Account_Role</valueSetName>
    </valueSet>
</CustomField>