force-app/main/default/objects/Project_Account_Relation__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>1. Not integration relevant
2. ZRD
3. SF-973</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>