force-app/main/default/objects/Project_Account_Relation__c/validationRules/Max_One_Building_Owner_Per_Project.validationRule-meta.xml
<ValidationRule>
    <fullName>Max_One_Building_Owner_Per_Project</fullName>
    <active>true</active>
    <description>A maximum of one building owner is allowed per project.
This applies to non-admin/integration users only.</description>
    <errorConditionFormula>AND(
  NOT(CONTAINS($Profile.Name, &apos;System Admin&apos;)),
  NOT(CONTAINS($Profile.Name, &apos;Systemadmin&apos;)),
  INCLUDES(Account_Role__c, &apos;3&apos;),
  NOT(ISBLANK(Project__r.Building_Owner_cleaned__c)) 
)</errorConditionFormula>
    <errorMessage>A maximum of one building owner is allowed per project.</errorMessage>
</ValidationRule>